@@ -6,7 +6,7 @@ ARG_ENABLE('crt-debug', 'Enable CRT memory dumps for debugging sent to STDERR', 
 ARG_ENABLE('cli-win32', 'Build console-less CLI version of PHP', 'no');
 
 if (PHP_CLI == "yes") {
-	SAPI('cli', 'php_cli.c php_cli_readline.c', 'php.exe');
+	SAPI('cli', 'php_cli.c', 'php.exe');
 	if (PHP_CRT_DEBUG == "yes") {
 		ADD_FLAG("CFLAGS_CLI", "/D PHP_WIN32_DEBUG_HEAP");
 	}
@@ -14,7 +14,7 @@ if (PHP_CLI == "yes") {
 }
 
 if (PHP_CLI_WIN32 == "yes") {
-	SAPI('cli_win32', 'cli_win32.c php_cli_readline.c', 'php-win.exe');
+	SAPI('cli_win32', 'cli_win32.c', 'php-win.exe');
 	ADD_FLAG("LDFLAGS_CLI_WIN32", "/stack:8388608");
 }
 
